<resources>
    <string name="app_name">Yudiz</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="frame1">Frame1</string>
    <string name="frame2">Frame2</string>
    <string name="frame3">Frame3</string>
    <string name="frame4">Frame4</string>
    <string name="frame5">Frame5</string>
    <string name="frame6">Frame6</string>
    <string name="frame_75">Frame(75)</string>
    <string name="frame_50">Frame(50)</string>
    <string name="frame_25">Frame(25)</string>
    <string name="activity">1. Activity</string>
    <string name="layout">2. Layout</string>
    <string name="views">3. Views</string>
    <string name="enter_your_first_name">First Name</string>
    <string name="enter_first_name">Enter First Name</string>

    <string name="enter_your_last_name">Last Name</string>
    <string name="enter_last_name">Enter Last Name</string>
    <string name="gender">Select Gender\t</string>
    <string name="dob">Date of Birth\t</string>
    <string name="enter_date_of_birth">Enter Date of Birth</string>
    <string name="phone_number">Phone Number</string>
    <string name="enter_your_phone_number">Enter Phone Number</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_pass">Enter Password</string>
    <string name="enter_adress">Enter Address</string>
    <string name="enter_your_address">Enter Your Address</string>
    <string name="t_c">Double check your data in the above form</string>
    <string name="t_c_check">Terms and Conditions Apply</string>
    <string name="banner_image">banner_image</string>
    <string name="hello_nyudiz_fam">Hello, \nYudiz Fam.!!</string>
    <string name="hello_nyudiz">Hello, Yudiz Fam.!!</string>
    <string name="radio_female">Female</string>
    <string name="radio_male">Male</string>
    <string name="radio_another">Another</string>
    <string name="txt_address">Address</string>
    <string name="btn_submit">Submit</string>
    <string name="_4_selector">4. Selector</string>
    <string name="_5_selector">5. ViewPagger</string>
    <string name="_6_recyclerview">6. RecyclerView</string>
    <string name="let_s_login">Let\'s Login</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="weather_data">Weather Data</string>
    <string name="_7_coordinator">7. Coordinator</string>
    <string name="_8_snackbar">8. Snackbar</string>


    <string name="sample_para">Bali is predominantly a Hindu country. Bali is known for its elaborate, traditional dancing. The dancing is inspired by its Hindi beliefs. Most of the dancing portrays tales of good versus evil. To watch the dancing is a breathtaking experience. Lombok has some impressive points of interest – the majestic Gunung Rinjani is an active volcano. It is the second highest peak in Indonesia. Art is a Balinese passion. Batik paintings and carved statues make popular souvenirs. Artists can be seen whittling and painting on the streets, particularly in Ubud. It is easy to appreciate each island as an attractive tourist destination. Majestic scenery; rich culture; white sands and warm, azure waters draw visitors like magnets every year. Snorkelling and diving around the nearby Gili Islands is magnificent. Marine fish, starfish, turtles and coral reef are present in abundance. Bali and Lombok are part of the Indonesian archipelago. Bali has some spectacular temples. The most significant is the Mother Temple, Besakih. The inhabitants of Lombok are mostly Muslim with a Hindu minority. Lombok remains the most understated of the two islands. Lombok has several temples worthy of a visit, though they are less prolific. Bali and Lombok are neighbouring islands.</string>
    <string name="font">9. Font</string>
    <string name="Menu">10. Menu</string>
    <string name="user_data">User Data:</string>
    <string name="add_user">ADD USER</string>
    <string name="user_details">User Details</string>
    <string name="_12_start_act">12. Start Activity</string>
    <string name="_11_dialog">11. Dialog</string>
    <string name="_13_fragment">13. Fragment</string>
    <string name="txt_settings">Settings</string>
    <string name="txt_home">Home</string>
    <string name="_14_user_permission">14. User Permission</string>
    <string name="click_above_to_show_weather">Click above to show Weather</string>
    <string name="_15_sharedpreference">15. SharedPreference</string>
    <string name="btn_view">VIEW</string>
    <string name="btn_clear">CLEAR</string>
    <string name="btn_next">Next</string>
    <string name="_16_intent_example">16. Intent Example</string>
    <string name="default_notification_channel_id">123456</string>

    <string name="HTML_text">A good example of a paragraph contains a topic sentence, details and a conclusion. \'There are many different kinds of animals that live in China. Tigers and leopards are animals that live in China\'s forests in the north. In the jungles, monkeys swing in the trees and elephants walk through the brush</string>
    <string name="_18_glide">18. Glide</string>
    <string name="_17_webview">17. WebView</string>
    <string name="txt_workmanager_testing">WorkManager Testing</string>
    <string name="demo_apk_start">DEMO APK START</string>
    <string name="txt_find_different">Find different flavours and enjoy \nthem at every moment</string>
    <string name="txt_try_best">Try the best\nburger now!</string>
</resources>