<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">


    <EditText
        android:id="@+id/fname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="name"
        android:hint="@string/enter_first_name"
        android:focusable="true"
        android:clickable="false"
        android:inputType="none"/>
    <EditText
        android:id="@+id/lname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_last_name"
        android:focusable="true"
        android:clickable="true"
        android:inputType="none"/>
    <EditText
        android:id="@+id/etDob"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_date_of_birth"
        android:focusable="false"
        android:clickable="true"
        android:inputType="none"/>

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_submit"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"/>
</LinearLayout>
