<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Scroll_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.RegistrationForm"
    xmlns:android="http://schemas.android.com/apk/res/android">

<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/main"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="20dp"
    tools:context=".views.RegistrationForm">

    <ImageView
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/banner"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/banner_image"
        android:scaleType="centerCrop"
        android:background="@drawable/banner_bg_1"/>



    <TextView
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_centerHorizontal="true"
        android:id="@+id/yudiz_fam"
        android:text="@string/hello_nyudiz_fam"
        android:textSize="@dimen/text_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="60dp"/>


    <TextView
        app:layout_constraintTop_toBottomOf="@id/banner"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="20sp"
        android:id="@+id/txt_f_name"
        android:textStyle="bold"
        android:text="@string/enter_your_first_name"
        android:textSize="14sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:layout_marginTop="20dp"/>
    <EditText
        android:importantForAutofill="no"
        app:layout_constraintTop_toBottomOf="@id/txt_f_name"
        app:layout_constraintStart_toStartOf="@+id/txt_f_name"
        android:layout_below="@id/txt_f_name"
        android:layout_marginTop="5dp"
        android:id="@+id/editText1"
        android:textColor="@color/black"
        android:background="@drawable/et_style"
        android:layout_width="match_parent"
        android:textColorHint="@color/black"
        android:layout_height="50dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:layout_marginStart="20sp"
        android:layout_marginEnd="20sp"
        android:hint="@string/enter_first_name" />
    <TextView
        app:layout_constraintTop_toBottomOf="@id/editText1"
        app:layout_constraintStart_toStartOf="@+id/txt_f_name"
        android:layout_below="@id/editText1"
        android:id="@+id/txt_l_name"
        android:text="@string/enter_your_last_name"
        android:textSize="14sp"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:layout_marginTop="5dp"/>
    <EditText
        android:importantForAutofill="no"
        app:layout_constraintTop_toBottomOf="@id/txt_l_name"
        app:layout_constraintStart_toStartOf="@+id/editText1"
        app:layout_constraintEnd_toEndOf="@id/editText1"
        android:layout_marginTop="5dp"
        android:layout_below="@id/txt_l_name"
        android:id="@+id/editText2"
        android:layout_marginStart="20sp"
        android:layout_marginEnd="20sp"
        android:textColor="@color/black"
        android:background="@drawable/et_style"
        android:layout_width="match_parent"
        android:textColorHint="@color/black"
        android:layout_height="50dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:hint="@string/enter_last_name" />
    <TextView
        app:layout_constraintTop_toBottomOf="@+id/editText2"
        app:layout_constraintStart_toStartOf="@+id/txt_f_name"
        android:id="@+id/txt_email"
        android:text="@string/enter_your_phone_number"
        android:textSize="14sp"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:layout_marginTop="5dp"/>
    <EditText
        android:autofillHints="phone"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@id/txt_email"
        app:layout_constraintStart_toStartOf="@+id/editText2"
        app:layout_constraintEnd_toEndOf="@id/editText2"
        android:layout_marginTop="5dp"
        android:id="@+id/editText_email"
        android:layout_marginStart="20sp"
        android:layout_marginEnd="20sp"
        android:textColor="@color/black"
        android:background="@drawable/et_style"
        android:layout_width="match_parent"
        android:textColorHint="@color/black"
        android:layout_height="50dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:hint="@string/enter_email"
        tools:ignore="TextFields" />
    <TextView
        app:layout_constraintTop_toBottomOf="@+id/editText_email"
        app:layout_constraintStart_toStartOf="@+id/txt_f_name"
        android:id="@+id/gender"
        android:text="@string/gender"
        android:textSize="14sp"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:layout_marginTop="10dp"/>

    <RadioGroup
        android:checkedButton="@id/banner"
        app:layout_constraintTop_toBottomOf="@+id/gender"
        android:layout_marginStart="25sp"
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/radio_male"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:buttonTint="@color/black"
            android:scaleX="1.1"
            android:scaleY="1.1"
            android:text="@string/radio_male"
            android:textColor="@color/black"
            android:textSize="16sp"
            tools:ignore="TouchTargetSizeCheck" />

        <RadioButton
            android:id="@+id/radio_female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:buttonTint="@color/black"
            android:scaleX="1.1"
            android:scaleY="1.1"
            android:text="@string/radio_female"
            android:textColor="@color/black"
            android:textSize="16sp"
            tools:ignore="TouchTargetSizeCheck" />

        <RadioButton
            android:id="@+id/radio_another"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:buttonTint="@color/black"
            android:scaleX="1.1"
            android:scaleY="1.1"
            android:text="@string/radio_another"
            android:textColor="@color/black"
            android:textSize="16sp"
            tools:ignore="TouchTargetSizeCheck" />
    </RadioGroup>
    <TextView
        app:layout_constraintTop_toBottomOf="@+id/gender"
        app:layout_constraintStart_toStartOf="@+id/txt_f_name"
        android:id="@+id/txt_dob"
        android:text="@string/dob"
        android:textSize="14sp"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:layout_marginTop="123dp"/>
    <EditText
        android:autofillHints="phone"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@id/txt_dob"
        app:layout_constraintStart_toStartOf="@+id/editText2"
        app:layout_constraintEnd_toEndOf="@id/editText2"
        android:layout_marginTop="5dp"
        android:id="@+id/editText_dob"
        android:layout_marginStart="20sp"
        android:layout_marginEnd="20sp"
        android:textColor="@color/black"
        android:background="@drawable/et_style"
        android:layout_width="match_parent"
        android:textColorHint="@color/black"
        android:layout_height="50dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:hint="@string/enter_date_of_birth" />
    <TextView
        app:layout_constraintTop_toBottomOf="@+id/editText_dob"
        app:layout_constraintStart_toStartOf="@+id/txt_f_name"
        android:id="@+id/txt_phone"
        android:text="@string/phone_number"
        android:textSize="14sp"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:layout_marginTop="5dp"/>
    <EditText
        android:autofillHints="phone"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@id/txt_phone"
        app:layout_constraintStart_toStartOf="@+id/editText_dob"
        app:layout_constraintEnd_toEndOf="@id/editText2"
        android:layout_marginTop="5dp"
        android:id="@+id/editText_phone"
        android:layout_marginStart="20sp"
        android:layout_marginEnd="20sp"
        android:textColor="@color/black"
        android:background="@drawable/et_style"
        android:layout_width="match_parent"
        android:textColorHint="@color/black"
        android:layout_height="50dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:hint="@string/enter_your_phone_number"
        tools:ignore="TextFields" />
    <TextView
        app:layout_constraintTop_toBottomOf="@+id/editText_phone"
        app:layout_constraintStart_toStartOf="@+id/txt_f_name"
        android:id="@+id/txt_address"
        android:text="@string/txt_address"
        android:textSize="14sp"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:layout_marginTop="5dp"/>
    <EditText
        android:autofillHints="phone"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@id/txt_address"
        app:layout_constraintStart_toStartOf="@+id/editText_dob"
        app:layout_constraintEnd_toEndOf="@id/editText2"
        android:layout_marginTop="5dp"
        android:id="@+id/editText_address"
        android:layout_marginStart="20sp"
        android:layout_marginEnd="20sp"
        android:textColor="@color/black"
        android:background="@drawable/et_style"
        android:layout_width="match_parent"
        android:textColorHint="@color/black"
        android:layout_height="50dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:hint="@string/enter_your_address" />

    <CheckBox
        android:layout_marginStart="20sp"
        android:id="@+id/t_c"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="5dp"
        android:buttonTint="@color/black"
        android:text="@string/t_c"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@id/txt_address"
        app:layout_constraintTop_toBottomOf="@id/editText_address"
        tools:ignore="TouchTargetSizeCheck" />

    <Button
        app:layout_constraintTop_toBottomOf="@+id/t_c"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/submitButton"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_submit"
        android:textColor="@color/white"
        android:background="@drawable/bt_style"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="10dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
