<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".sharedpreferences.SecuredSharedPreference">

    <ImageView
        android:id="@+id/banner_1"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/banner_image"
        android:scaleType="centerCrop"
        android:background="@drawable/banner_bg_1"/>
    <TextView
        android:id="@+id/yudiz_fam"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_centerHorizontal="true"
        android:text="@string/hello_nyudiz_fam"
        android:textSize="@dimen/text_size"
        android:textColor="@android:color/black"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="60dp"/>
    <TextView
        android:id="@+id/txt_f_name"
        app:layout_constraintTop_toBottomOf="@id/banner_1"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="20sp"
        android:textStyle="bold"
        android:text="@string/enter_your_first_name"
        android:textSize="14sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:layout_marginTop="20dp"/>
    <EditText
        android:importantForAutofill="no"
        app:layout_constraintTop_toBottomOf="@id/txt_f_name"
        app:layout_constraintStart_toStartOf="@+id/txt_f_name"
        android:layout_marginTop="5dp"
        android:id="@+id/edit_fname"
        android:textColor="@color/black"
        android:background="@drawable/et_style"
        android:layout_width="match_parent"
        android:textColorHint="@color/black"
        android:layout_height="50dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:layout_marginStart="20sp"
        android:layout_marginEnd="20sp"
        android:hint="@string/enter_first_name" />

    <TextView
        app:layout_constraintTop_toBottomOf="@id/edit_fname"
        app:layout_constraintStart_toStartOf="@+id/txt_f_name"
        android:layout_below="@id/edit_fname"
        android:id="@+id/txt_l"
        android:text="@string/enter_your_last_name"
        android:textSize="14sp"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:layout_marginTop="5dp"/>
    <EditText
        android:importantForAutofill="no"
        app:layout_constraintTop_toBottomOf="@id/txt_l"
        app:layout_constraintStart_toStartOf="@+id/edit_fname"
        app:layout_constraintEnd_toEndOf="@id/edit_fname"
        android:layout_marginTop="5dp"
        android:id="@+id/edit_lname"
        android:layout_marginStart="20sp"
        android:layout_marginEnd="20sp"
        android:textColor="@color/black"
        android:background="@drawable/et_style"
        android:layout_width="match_parent"
        android:textColorHint="@color/black"
        android:layout_height="50dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:hint="@string/enter_last_name" />


    <Button
        app:layout_constraintTop_toBottomOf="@+id/edit_lname"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/btn_submit"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/btn_submit"
        android:textColor="@color/white"
        android:background="@drawable/bt_style"
        android:layout_centerHorizontal="true" />
    <Button
        app:layout_constraintTop_toBottomOf="@+id/btn_submit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/btn_view"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/btn_view"
        android:textColor="@color/white"
        android:background="@drawable/bt_style"
        android:layout_centerHorizontal="true" />
    <Button
        app:layout_constraintTop_toBottomOf="@+id/btn_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/btn_clear"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/btn_clear"
        android:textColor="@color/white"
        android:background="@drawable/bt_style"
        android:layout_centerHorizontal="true" />

</androidx.constraintlayout.widget.ConstraintLayout>