<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/green_bg"
    tools:context=".selector.LoginScreen">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20sp"
        android:contentDescription="@string/banner_image"
        android:src="@drawable/img"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_yudiz_fam"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text="@string/hello_nyudiz"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo" />

    <EditText
        android:id="@+id/email_et"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="20sp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20sp"
        android:background="@drawable/et_style"
        android:hint="@string/enter_email"
        android:importantForAutofill="no"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintStart_toStartOf="@+id/txt_yudiz_fam"
        app:layout_constraintTop_toBottomOf="@id/txt_yudiz_fam"
        tools:ignore="TextFields" />

    <EditText
        android:id="@+id/pass_et"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="20sp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="20sp"
        android:background="@drawable/et_style"
        android:hint="@string/enter_pass"
        android:importantForAutofill="no"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintStart_toStartOf="@+id/email_et"
        app:layout_constraintTop_toBottomOf="@id/email_et"
        tools:ignore="TextFields" />

    <CheckBox

        android:id="@+id/t_c_check"
        style="@style/android_button_checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20sp"
        android:layout_marginTop="10dp"
        android:text="@string/t_c_check"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pass_et" />

    <Button
        android:id="@+id/selector"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/bg_blur"
        android:text="@string/let_s_login"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/t_c_check" />
</androidx.constraintlayout.widget.ConstraintLayout>